# m7fazty

build-m7fazty-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-m7fazty-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.cmake/api/v1/reply/: cache-v2-bba024ccef67c28d2417.json  cmakeFiles-v1-e8b83159f3c5429db586.json  codemodel-v2-6cb248381f107fef7e2d.json  directory-.-Debug-9dc0df762f65e90f4d6e.json  index-2024-05-03T19-47-34-0169.json  target-m7fazty-Debug-f8ecd4734869ce3d8b3c.json  target-m7fazty_autogen_timestamp_deps-Debug-e77efd4cc51a4b143876.json
build-m7fazty-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-36e2c567c25153410835.json  codemodel-v2-9bdc9e9c32590abb9deb.json  index-2024-05-02T16-53-45-0304.json  target-m7fazty-Debug-34517e96f796792bfa37.json  target-m7fazty_autogen-Debug-406ece5285ab2b373ca0.json
build-m7fazty-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-m7fazty-Desktop_x86_windows_msvc2022_pe_64bit-Debug/m7fazty_autogen/: deps  mocs_compilation.cpp
build-m7fazty-Desktop_x86_windows_msvc2022_pe_64bit-Debug/m7fazty_autogen/EWIEGA46WW/: moc_add_edit_dialog.cpp  moc_add_edit_dialog.cpp.d  moc_adjust_balance_dialog.cpp  moc_adjust_balance_dialog.cpp.d  moc_admin.cpp  moc_admin.cpp.d  moc_delete_suspend_dialog.cpp  moc_delete_suspend_dialog.cpp.d  moc_editprofile_dialog.cpp  moc_editprofile_dialog.cpp.d  moc_login.cpp  moc_login.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_requestmoney_dialog.cpp  moc_requestmoney_dialog.cpp.d  moc_sendmoney_dialog.cpp  moc_sendmoney_dialog.cpp.d  moc_sign_up.cpp  moc_sign_up.cpp.d  moc_user.cpp  moc_user.cpp.d  moc_view_trans_dialog.cpp  moc_view_trans_dialog.cpp.d  moc_view_users_dialog.cpp  moc_view_users_dialog.cpp.d  moc_viewbalance_dialog.cpp  moc_viewbalance_dialog.cpp.d  moc_viewtranshistory_dialog.cpp  moc_viewtranshistory_dialog.cpp.d
build-m7fazty-Desktop_x86_windows_msvc2022_pe_64bit-Debug/m7fazty_autogen/include/: ui_add_edit_dialog.h  ui_adjust_balance_dialog.h  ui_admin.h  ui_delete_suspend_dialog.h  ui_editprofile_dialog.h  ui_login.h  ui_mainwindow.h  ui_requestmoney_dialog.h  ui_sendmoney_dialog.h  ui_sign_up.h  ui_user.h  ui_view_trans_dialog.h  ui_view_users_dialog.h  ui_viewbalance_dialog.h  ui_viewtranshistory_dialog.h
m7fazty/: .gitignore  CMakeLists.txt  Resources.qrc  account.cpp  account.h  add_edit_delete.cpp  add_edit_delete.h  add_edit_delete.ui  add_edit_dialog.cpp  add_edit_dialog.h  add_edit_dialog.ui  adjust_balance_dialog.cpp  adjust_balance_dialog.h  adjust_balance_dialog.ui  admin.cpp  admin.h  admin.ui  admin_c.cpp  admin_c.h  admin_edits.cpp  admin_edits.h  admin_edits.ui  admin_ui.h  confirm_pass_dialog.cpp  confirm_pass_dialog.h  confirm_pass_dialog.ui  context.cpp  context.h  delete_suspend_dialog.cpp  delete_suspend_dialog.h  delete_suspend_dialog.ui  editprofile_dialog - Copy.cpp  editprofile_dialog.cpp  editprofile_dialog.h  editprofile_dialog.ui  files.cpp  files.h  login.cpp  login.h  login.ui  (+42 more)
m7fazty/files/: Transiction.csv  User.csv
